--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -1693,7 +1693,7 @@ template("chrome_public_apk_or_module_tmpl") {
 
 chrome_public_apk_or_module_tmpl("chrome_public_apk") {
   target_type = "android_apk"
-  apk_name = "Brave"
+  apk_name = "Dissenter"
   enable_multidex = is_java_debug
 }
 
@@ -1833,7 +1833,7 @@ template("monochrome_public_apk_or_module_tmpl") {
 monochrome_public_apk_or_module_tmpl("monochrome_public_apk") {
   version_code = monochrome_version_code
   version_name = chrome_version_name
-  apk_name = "BraveMono"
+  apk_name = "DissenterMono"
   target_type = "android_apk"
 }
 
